[package]
name = "openalias"
description = "Securely look up and parse OpenAlias data"
documentation = "https://cdn.rawgit.com/nabijaczleweli/cargo-update/doc/cargo_update/index.html"
repository = "https://github.com/nabijaczleweli/cargo-update"
readme = "README.md"
keywords = ["cargo", "update", "plugin", "subcommand"]
categories = ["command-line-utilities", "parser-implementations", "authentication"]
license = "MIT"
build = "build.rs"
# Remember to also update in appveyor.yml
# Remember to also update in openalias.rs-manifest.rc
version = "0.1.0"
# Remember to also update in man/openalias.rs.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
crc = "1.5"

[build-dependencies]
peg = "0.5"
rustfmt = "0.9"
embed-resource = "1.1"


[[bin]]
name = "openalias"
test = false
doc = false
